# kosma

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  vcpkg.json
BuildConfigs/: APITemplate.h.in
Source/: CMakeLists.txt
Source/Application/: CMakeLists.txt
Source/Application/impl/: KSEditor.cpp  KSEditor.h  KSMain.cpp  KsEditor.cpp  KsMain.cpp
Source/Core/: CMakeLists.txt
Source/Core/private/: KSAppArguments.cpp  KSApplication.cpp  KSApplicationImpl.cpp  KSApplicationImpl.h  KSRealAppArguments.cpp  KSRealAppArguments.h
Source/Core/private/Memory/: KSMemoryStream.cpp
Source/Core/private/String/: KSString.cpp  KSStringUtils.cpp  KSStringUtils.h  KSStringView.cpp
Source/Core/private/Utils/: KSEnumWrapper.cpp
Source/Core/public/: KSAppArguments.h  KSApplication.h
Source/Core/public/Container/: KSSet.h  KSVector.h  KSVector.inl
Source/Core/public/Memory/: KSMemoryStream.h  KSUniquePtr.h
Source/Core/public/String/: KSChar.h  KSCharTypes.h  KSString.h  KSStringView.h
Source/Core/public/Utility/: KSCompressedPair.h  KSEnumWrapper.h  KSOptional.h
Tests/UnitTests/: CMakeLists.txt
Tests/UnitTests/String/: CMakeLists.txt  StringTests.cpp  StringViewTests.cpp
cmake/: Codesign.cmake  ConfigConan.cmake  EnvDetect.cmake  ExecutableMaker.cmake  File.cmake  ImportedTargetMaker.cmake  InitVcpkg.cmake  LevelMaker.cmake  LoadCMakeScripts.cmake  ModuleMaker.cmake  Options.cmake  SetOuputDirectory.cmake  TestMaker.cmake  ThirdPartyManage.cmake  ThirdPartyTargetMaker.cmake  VcpkgTargetMaker.cmake
(+2 files in other folders)
